--- a/code/add-layers/manifest.json
+++ b/code/add-layers/manifest.json
@@ -9,7 +9,9 @@
   "copyright": "",
   "license": "http://www.apache.org/licenses/LICENSE-2.0",
   "properties": {},
-  "translatedLocales": ["en"],
+  "translatedLocales": [
+    "en"
+  ],
   "defaultSize": {
     "width": 400,
     "height": 200
